--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,37 +1,103 @@
-.navbar {
-  padding-right: 10px;
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+.display_flex_standard {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
+}
+
+.navbar {
+  padding: 0 30px;
   gap: 10px;
-  background-color: #778899;
+  background-color: #90ee90;
   min-height: 50px;
+  position: relative;
+}
+
+.menu {
+  gap: 20px;
 }
 
 .navbar_item {
   color: #fff;
   font-size: 20px;
-  font-weight: bold;
   text-decoration: none;
   text-transform: capitalize;
+}
+
+.navbar_item:hover {
+  text-decoration: underline;
+}
+
+.logo {
+  font-size: 26px !important;
+  line-height: 28px;
+  font-weight: bold !important;
+}
+
+.burger_menu {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+  padding: 5px 10px;
+  height: 100%;
+  width: 50px;
+  cursor: pointer;
+}
+
+@media (max-width: 715px) {
+  .burger_menu {
+    display: flex;
+  }
+
+  .line {
+    height: 5px;
+    border-radius: 6px;
+    width: 100%;
+    background-color: #fff;
+  }
+
+  .menu {
+    display: flex;
+    position: absolute;
+    z-index: 10;
+    top: 52px;
+    right: 2px;
+    flex-direction: column;
+    max-width: 400px;
+    width: 100%;
+    transition: width 1s;
+    background-color: #90ee90;
+    border-radius: 5px;
+    padding: 10px 0;
+  }
+  .navbar_item:hover {
+    transform: scale(1.01);
+    transition: all 100ms;
+  }
+
+  .menu_hidden {
+    display: none;
+  }
+}
+
+.home {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  color: #90ee90;
+  gap: 20px;
+  margin-top: 10%;
 }
 
-.navbar_item:hover::after {
-  content: "";
-  height: 2px;
-  width: 100%;
-  background-color: #fff;
-  transition: 0.5s all;
+.title {
+  font-size: 48px;
+  font-weight: bold;
 }
 
-@media (max-width: 628px) {
-  .navbar_item {
-    padding: 5px;
-    font-size: 16px;
-    font-weight: 500;
-  }
+.content {
+  line-height: 16px;
 }
